updated to use autoconf

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,37 @@
 *.so
 lib*.so.*
 *~
-debian-template/wiringPi
-debian-template/wiringpi-*.deb
 gpio/gpio
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache
+*.o
+*.lo
+config.h
+*.BAK
+config.log
+compile
+config.guess
+config.h.in
+config.status
+config.sub
+configure
+debian/debian.tar.gz
+debian/wiringpi.dsc
+depcomp
+.deps
+.libs
+*.la
+install-sh
+libtool
+libwiringPi.pc
+libwiringPiDev.pc
+ltmain.sh
+m4
+missing
+pins/pins.aux
+pins/pins.dvi
+pins/pins.log
+stamp-h1
+wiringpi.spec
