--- a/debian/control.in
+++ b/debian/control.in
@@ -2,7 +2,7 @@ Source: wiringpi
 Package: wiringpi
 Section: libs
 Priority: optional
-Maintainer: "wiringpi" <wiringpi@indimail.org>
+Maintainer: @email@
 Standards-Version: 4.5.0
 Build-Depends: debhelper (>= 9), binutils, coreutils, pkg-config
 Homepage: https://github.com/mbhangui/wiringpi
@@ -22,8 +22,8 @@ Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: The wiringpi libraries, headers and gpio command
- allow GPIO access on a Raspberry Pi from C and C++
- programs as well as from the command-line gpio utility.
+ Libraries to allow GPIO access on a Raspberry Pi from C and C++
+ and BASIC programs as well as from the command-line
  .
  This package contains the shared library libwiringpi linked against
  glibc.
@@ -48,8 +48,8 @@ Section: libdevel
 Architecture: any
 Depends: libwiringpi (= ${binary:Version}), ${misc:Depends}
 Description: The wiringpi libraries, headers and gpio command
- allow GPIO access on a Raspberry Pi from C and C++
- programs as well as from the command-line gpio utility
+ Libraries to allow GPIO access on a Raspberry Pi from C and C++
+ and BASIC programs as well as from the command-line
  .
  This package contains the static library libwiringpi.a and headers for
  libwiringpi.
