--- a/debian/.gitignore
+++ b/debian/.gitignore
@@ -1,9 +1,3 @@
-*.debhelper.log
-*.substvars
-tmp
-wiringpi
-libwiringpi2
-libwiringpi-dev
-files
-*.postinst.debhelper
-*.postrm.debhelper
+copyright
+control
+changelog
