fixed few compiler warnings

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,9 +3,9 @@ ACLOCAL_AMFLAGS=-I m4
 
 pkgconfigdir=@pkgconfigdir@
 pkgconfig_DATA = libwiringPi.pc libwiringPiDev.pc
-noinst_DATA = wiringpi.spec
+noinst_DATA = wiringPi.spec
 
-SUBDIRS=devLib wiringPi gpio pins
+SUBDIRS=devLib wiringPi gpio
 
 edit = sed \
 	-e 's}@PACKAGE\@}$(PACKAGE)}g' \
@@ -17,7 +17,7 @@ edit = sed \
 	-e 's}@VERSION\@}$(VERSION)}g' \
 	-e 's}@prefix\@}$(prefix)}g'
 
-wiringpi.spec: wiringpi.spec.in catChangeLog doc/ChangeLog conf-version \
+wiringPi.spec: wiringPi.spec.in catChangeLog doc/ChangeLog conf-version \
 conf-release conf-email
 	(cat $@.in;./catChangeLog) | $(edit) > $@
 wiringpi.changes: doc/ChangeLog conf-version conf-release conf-email
