--- a/wiringPi.spec.in
+++ b/wiringPi.spec.in
@@ -26,7 +26,7 @@ Name:    wiringPi
 Version: @version@
 Release: @release@%{?dist}
 Summary: Utility to access/maniplate Raspberry Pi GPIO pins
-License: LGPL-3.0
+License: LGPLv3+
 URL:     https://github.com/mbhangui/wiringpi
 Source0: %{name}-%{version}.tar.gz
 BuildRequires: gcc gcc-c++ make autoconf automake libtool pkgconfig
@@ -121,17 +121,16 @@ and applications need to dynamically load and use libwiringpidev.
 %else
   %{__make} -s %{?_smp_mflags} DESTDIR=%{buildroot} install
 %endif
-  for i in %{name} libwiringpi libwiringpi-devel libwiringpidev libwiringpidev-devel
-  do
-    %{__mkdir_p} %{buildroot}%{_prefix}/share/doc/$i
-    install -p -m 0644 COPYING.LESSER %{buildroot}%{_prefix}/share/doc/$i
-  done
+for i in %{name} libwiringpi libwiringpi-devel libwiringpidev libwiringpidev-devel
+do
+  %{__mkdir_p} %{buildroot}%{_prefix}/share/doc/$i
+  install -p -m 0644 COPYING.LESSER %{buildroot}%{_prefix}/share/doc/$i
+done
+%{__rm} -f %{buildroot}%{_libdir}/libwiringPi.la
+%{__rm} -f %{buildroot}%{_libdir}/libwiringPiDev.la
 
 %post -p /sbin/ldconfig
 %postun -p /sbin/ldconfig
-
-%clean
-rm -rf %{buildroot}
 
 %files
 %if %build_on_obs == 0
