updated workflow script

--- a/.github/workflows/wiringpi-c-cpp.yml
+++ b/.github/workflows/wiringpi-c-cpp.yml
@@ -8,6 +8,8 @@ on:
       - '!**/debian/*'
       - '!**/wiringpi.spec.in'
       - '!**/obs/*'
+      - '!**/pins/*'
+      - '!**/examples/*'
       - '!**/doc/*'
       - '!**.md'
   workflow_dispatch:
